# Percolation

./: CMakeLists.txt  Calc.f90  Grid.f90  Percolation.f90  Percolation.sln  Percolation.u2d  Percolation.vfproj  README.md  Stats.F90  Stats.f90
.github/workflows/: cmake.yml
data/: data2.plt  percolation.plt
